[package]
name = "rstl"
version = "0.1.0"
edition = "2021"
description = "A simple but stylish todo list program."
license = "GPL-3.0-or-later"
repository = "https://github.com/OctoRocket/rstl"
readme = "README.md"
keywords = ["tui", "terminal", "todo"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.93"
ratatui = "0.29"
